publishing to npm configuration .

--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,14 @@
+.idea/
 node_modules/
-dist/
-*.d.ts
+dist/test/
+src/
+test/
 *.log
 *.tgz
-
-!index.d.ts
-!index.ref.d.ts
+.npmignore
+nowjs-core.iml
+tsconfig.json
+gulpfile.js
+tslint.json
+typings.json
+typings
