--- a/package.json
+++ b/package.json
@@ -1,23 +1,27 @@
 {
   "name": "nowjs-core",
-  "description": "NowCanDo Core is a  library written by TypeScript code maintains under MIT licence",
+  "description": "NowCanDo Javascript Core [nowjs-core] is a  library written by TypeScript code maintains under Apache 2.0 licence",
   "version": "0.1.5",
   "private": false,
   "scripts": {
-    "preinstall": "npm install autodts",
-    "postinstall": "autodts link",
-    "prepublish": "tsc && autodts generate",
-    "test": "node test/test.js"
+
   },
+  "main": "dist/src/index.js",
+  "typings":  "dist/src/index.d.ts",
   "author": "Saeed Tabrizi at NowCanDo.Com",
   "email": "Saeed at NowCanDo.Com",
   "license": "Apache 2.0",
+  "keywords": ["nowjs","nowjscore","nowjs-core","nowcando","Saeed Tabrizi","light weight","library","LOB","line of business"],
   "bugs": {
     "url": "https://github.com/nowcando/nowjs-core/issues"
   },
   "homepage": "https://github.com/nowcando/nowjs-core#readme",
   "typescript": {
-    "definition": "index.d.ts"
+    "definition": "dist/src/index.d.ts"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nowcando/nowjs-core.git"
   },
   "dependencies": {},
   "devDependencies": {
