--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: node_js
 node_js:
-  - "6"
-  - "7"
   - "8"
   - "8.2"
 
 sudo: false
+
+install:
+  - npm install typescript -g
+  - npm install ts-node -g 
+  - npm install
+script:
+  - npm run test
