--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
   - "8"
-  - "8.2"
 
 sudo: false
 
@@ -10,4 +9,5 @@ install:
   - npm install ts-node -g 
   - npm install
 script:
+  - npm run lint
   - npm run test
