--- a/package.json
+++ b/package.json
@@ -79,18 +79,18 @@
     "url": "https://github.com/nowcando/nowjs-core.git"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.10"
+    "reflect-metadata": "^0.1.10",
+    "safe-buffer": "^5.1.1"
   },
   "devDependencies": {
     "@types/jest": "^18.1.1",
-    "@types/nodeunit": "0.0.30",
+    "@types/node": "^8.0.17",
     "full-icu": "^1.1.3",
     "jest": "^18.1.0",
     "jest-environment-node-debug": "^2.0.0",
     "jest-environment-node-debug-fixed": "^1.0.0",
-    "nodeunit": "^0.9.1",
     "ts-jest": "^18.0.3",
     "ts-node": "^3.2.1",
-    "typescript": "^2.1.6"
+    "typescript": "^2.4.2"
   }
 }
