--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": " jest  --no-cache  ",
     "test:watch": "jest --watch",
     "coverage": " jest  --no-cache --coverage  ",
-    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'" ,
+    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prepare": "npm run lint && npm run test && npm run build:release"
   },
   "main": "lib/index.js",
@@ -37,11 +37,11 @@
   ],
   "jest": {
     "globals": {
-      "__TS_CONFIG__": "tsconfig.test.json",
       "ts-jest": {
         "tsConfigFile": "tsconfig.test.json"
       }
     },
+    "mapCoverage": true,
     "collectCoverageFrom": [
       "src/**/*.{ts,tsx}",
       "!**/node_modules/**"
@@ -50,7 +50,6 @@
     "transform": {
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
-    "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
     "moduleFileExtensions": [
       "ts",
@@ -59,7 +58,9 @@
     ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
-      "/test/"
+      "/test/",
+      "/lib/",
+      "/dist/"
     ],
     "coverageThreshold": {
       "global": {
@@ -82,17 +83,15 @@
     "url": "https://github.com/nowcando/nowjs-core.git"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.10",
-    "safe-buffer": "^5.1.1"
+    "reflect-metadata": "^0.1.10"
   },
   "devDependencies": {
-    "@types/jest": "^18.1.1",
+    "@types/jest": "^20.0.5",
     "@types/node": "^8.0.17",
     "full-icu": "^1.1.3",
-    "jest": "^18.1.0",
+    "jest": "^20.0.4",
     "jest-environment-node-debug": "^2.0.0",
-    "jest-environment-node-debug-fixed": "^1.0.0",
-    "ts-jest": "^18.0.3",
+    "ts-jest": "20.0.7",
     "ts-node": "^3.2.1",
     "typescript": "^2.4.2"
   }
