--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "nowjs-core",
   "description": "NowCanDo Javascript Core [nowjs-core] is a  library written by TypeScript code maintains under Apache 2.0 licence",
-  "version": "1.0.1",
+  "version": "0.9.1",
   "private": false,
   "scripts": {
     "debug": "npm run-script build:debug ",
+    "build:test": "npm run-script clean:dist && tsc --p ./tsconfig.test.json",
     "build:debug": "npm run-script clean:dist && tsc --p ./tsconfig.debug.json",
     "build:release": "npm run-script clean:build && tsc --p ./tsconfig.release.json",
     "clean": "npm run clean:dist",
     "clean:dist": "rm -rf ./dist/*",
     "clean:build": "rm -rf ./lib/*",
-    "test": " jest  --no-cache  ",
-    "test:watch": "jest --watch",
-    "coverage": " jest  --no-cache --coverage  ",
+    "test": "jest  --no-cache --config ./jest.json",
+    "test:watch": "jest --watch --config ./jest.json",
+    "coverage": " jest  --no-cache --coverage  --config ./jest.json ",
     "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prepare": "npm run lint && npm run test && npm run build:release"
   },
@@ -35,42 +36,6 @@
     "linq",
     "validation"
   ],
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "tsconfig.test.json"
-      }
-    },
-    "mapCoverage": true,
-    "collectCoverageFrom": [
-      "src/**/*.{ts,tsx}",
-      "!**/node_modules/**"
-    ],
-    "verbose": true,
-    "transform": {
-      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/",
-      "/lib/",
-      "/dist/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    }
-  },
   "bugs": {
     "url": "https://github.com/nowcando/nowjs-core/issues"
   },
@@ -83,16 +48,17 @@
     "url": "https://github.com/nowcando/nowjs-core.git"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.10"
+    "jest-environment-node-debug-fixed": "^1.0.0",
+    "reflect-metadata": ">=0.1.10"
   },
   "devDependencies": {
-    "@types/jest": "^20.0.5",
-    "@types/node": "^8.0.17",
-    "full-icu": "^1.1.3",
-    "jest": "^20.0.4",
-    "jest-environment-node-debug": "^2.0.0",
-    "ts-jest": "20.0.7",
-    "ts-node": "^3.2.1",
-    "typescript": "^2.4.2"
+    "@types/jest": ">=20.0.5",
+    "@types/node": ">=8.0.17",
+    "full-icu": ">=1.1.3",
+    "jest": ">=20.0.4",
+    "jest-environment-node-debug": ">=2.0.0",
+    "ts-jest": ">=20.0.7",
+    "ts-node": ">=3.2.1",
+    "typescript": ">=2.4.2"
   }
 }
