--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,10 @@ install:
 script:
   - npm run lint
   - npm run test
+
+deploy:
+  provider: npm
+  email: dev@nowcando.com
+  api_key: $NPM_TOKEN
+  on:
+    branch: master
