--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,13 @@ install:
 script:
   - npm run lint
   - npm run test
-
+before_deploy:
+  - npm run build:release
 deploy:
   provider: npm
   email: dev@nowcando.com
   api_key: $NPM_TOKEN
   on:
     branch: master
+before_deploy:
+  - npm run clean:release
