--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "prepare": "npm run lint && npm run test && npm run build:release",
     "preversion": "npm test",
     "version": "npm run build:release",
-    "postversion": "git push && git push --tags && npm clean:release"
+    "postversion": "git push && git push --tags && npm clean:release",
+    "release:patch":"npm version patch -m \"Upgrade to %s for patch and some bug fixes.\"",
+    "release:minor":"npm version minor -m \"Upgrade to %s for minor enhancments & and bug fixes.\"",
+    "release:major":"npm version major -m \"Upgrade to %s for major features and bug fixes.\""
   },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
