--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "coverage": " jest  --no-cache --coverage  --config ./jest.json ",
     "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prepare": "npm run lint && npm run test && npm run build:release",
-    "preversion": "npm test && npm run changelog:update",
+    "preversion": "npm test ",
     "version": "npm run build:release ",
-    "postversion": "git push && git push --tags && npm run clean:release",
+    "postversion": "git push && git push --tags && npm run changelog:update && git push && npm run clean:release",
     "release:patch": "npm version patch -m \"Upgrade to %s for patch and some bug fixes.\"",
     "release:minor": "npm version minor -m \"Upgrade to %s for minor enhancments & and bug fixes.\"",
     "release:major": "npm version major -m \"Upgrade to %s for major features and bug fixes.\"",
