--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "coverage": " jest  --no-cache --coverage  --config ./jest.json ",
     "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prepare": "npm run lint && npm run test && npm run build:release",
-    "preversion": "npm test ",
+    "preversion": "npm test && npm run changelog:update",
     "version": "npm run build:release ",
     "postversion": "git push && git push --tags && npm run changelog:update && git push && npm run clean:release",
-    "release:patch": "npm version patch -m \"Upgrade to %s for patch and some bug fixes.\"",
-    "release:minor": "npm version minor -m \"Upgrade to %s for minor enhancments & and bug fixes.\"",
-    "release:major": "npm version major -m \"Upgrade to %s for major features and bug fixes.\"",
-    "changelog:update": "github-changes -o nowcando -r nowjs-core --no-merges -b develop && git commit -a -m 'updated CHANGELOG.md'"
+    "release:patch": "npm version patch -m \"upgrade: Upgrade to %s for patch and some bug fixes.\"",
+    "release:minor": "npm version minor -m \"upgrade: Upgrade to %s for minor enhancments & and bug fixes.\"",
+    "release:major": "npm version major -m \"upgrade: Upgrade to %s for major features and bug fixes.\"",
+    "changelog:update": "github-changes -o nowcando -r nowjs-core --no-merges -b develop && git commit -a -m 'update: The CHANGELOG.md updated.'"
   },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
