update : add all merge pull to change log

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "release:patch": "npm version patch -m \"upgrade: Upgrade to %s for patch and some bug fixes.\"",
     "release:minor": "npm version minor -m \"upgrade: Upgrade to %s for minor enhancments & and bug fixes.\"",
     "release:major": "npm version major -m \"upgrade: Upgrade to %s for major features and bug fixes.\"",
-    "changelog:update": "github-changes -o nowcando -r nowjs-core --no-merges -b develop && git commit -a -m 'update: The CHANGELOG.md updated.'"
+    "changelog:update": "github-changes -o nowcando -r nowjs-core -b develop && git commit -a -m 'update: The CHANGELOG.md updated.'"
   },
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
