--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "jest-environment-node-debug": ">=2.0.0",
     "ts-jest": ">=20.0.7",
     "ts-node": ">=3.2.1",
+    "tslint": "^5.7.0",
     "typescript": ">=2.4.2"
   }
 }
