update changelog generator utility

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "coverage": " jest  --no-cache --coverage  --config ./jest.json ",
     "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "prepublishOnly": "npm run lint && npm run test && npm run build:release",
-    "preversion": "npm test && npm run changelog:update",
+    "preversion": "npm test",
     "version": "npm run build:release ",
-    "postversion": "git push && git push --tags && npm run changelog:update && git push && npm run clean:release",
-    "release:patch": "npm version patch -m \"upgrade: Upgrade to %s for patch and some bug fixes.\"",
-    "release:minor": "npm version minor -m \"upgrade: Upgrade to %s for minor enhancments & and bug fixes.\"",
-    "release:major": "npm version major -m \"upgrade: Upgrade to %s for major features and bug fixes.\"",
-    "changelog:update": "github-changes -o nowcando -r nowjs-core -b develop && git commit -a -m 'update: The CHANGELOG.md updated.'",
+    "postversion": "npm run clean:release",
+    "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
+    "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
+    "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags",
+    "changelog:update": "",
     "docs:update": "typedoc --out ./docs/documentation/ ./src/  && git commit -a -m 'update: The documentation updated.'",
     "docs:clean": "rm -rf ./docs/documentation/*",
     "docs:publish": "{{PUBLISH TO DOC_SITE_URL}}"
