feat : add some methods to map and set

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,17 +12,14 @@
             "sourceMaps": true,
             "runtimeExecutable": null,
             "runtimeArgs": [
-                "--inspect=5858",
-                "--inspect-brk",
+                "--inspect-brk=5858",
                 "--icu-data-dir=./node_modules/full-icu",
                 "${workspaceRoot}/node_modules/.bin/jest",
+                "--runInBand",
                 "--no-cache",
                 "--colors",
                 "--config",
                 "./jest.json",
-                "-i",
-                "--env",
-                "jest-environment-node-debug"
             ],
             "cwd": "${workspaceRoot}",
             "console": "internalConsole",
