--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
                 "--inspect-brk=5858",
                 "--icu-data-dir=./node_modules/full-icu",
                 "${workspaceRoot}/node_modules/.bin/jest",
-               // "--runInBand",
+                "--runInBand",
                 "--no-cache",
                 "--colors",
                 "--config",
