--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/jest": "^22.2.2",
     "@types/node": "^9.6.1",
     "full-icu": "^1.2.1",
+    "generate-changelog": "^1.7.1",
     "jest": ">=22.4.3",
     "jest-environment-node-debug": ">=2.0.0",
     "ts-jest": "^22.4.2",
