fix : jest run in band for speedup test in ci .

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "clean": "npm run clean:dist",
     "clean:dist": "rm -rf ./dist/*",
     "clean:release": "rm -rf ./lib/*",
-    "test": "jest --runInBand --maxWorkers=4 --no-cache --config ./jest.json",
-    "test:watch": "jest --runInBand --maxWorkers=4 --watch --config ./jest.json",
-    "coverage": " jest --runInBand --maxWorkers=4 --no-cache --coverage  --config ./jest.json ",
+    "test": "jest --runInBand  --no-cache --config ./jest.json",
+    "test:watch": "jest --runInBand  --watch --config ./jest.json",
+    "coverage": " jest --runInBand  --no-cache --coverage  --config ./jest.json ",
     "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
     "lint-fix": "tslint --fix 'src/**/*.ts' 'test/**/*.ts' -t verbose",
     "prepublishOnly": "npm run lint && npm run test && npm run build:release",
