--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "vsicons.presets.angular": false,
     "jest.pathToConfig": "./jest.json",
+    "typescript.tsdk": "node_modules/typescript/lib",
 }
