test : add color utils test and dummy test  for run in node 10.

--- a/tsconfig.debug.json
+++ b/tsconfig.debug.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
         "removeComments": false,
         "sourceMap": true,
-        "outDir": "dist"
+        "outDir": "dist",
+        "declaration": true
   }
 }
