--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "runtimeExecutable": null,
             "runtimeArgs": [
                 "--inspect-brk=5858",
-                "--icu-data-dir=./node_modules/full-icu",
+               // "--icu-data-dir=./node_modules/full-icu",
                 "${workspaceRoot}/node_modules/.bin/jest",
                 "--runInBand",
                 "--no-cache",
