--- a/package.json
+++ b/package.json
@@ -66,14 +66,14 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.2",
+    "@types/node": "^12.0.7",
     "full-icu": "^1.3.0",
     "generate-changelog": "^1.7.1",
     "jest": ">=24.8.0",
     "jest-environment-node-debug": ">=2.0.0",
     "ts-jest": "^24.0.2",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
-    "typescript": ">=3.4.5"
+    "ts-node": "^8.2.0",
+    "tslint": "^5.17.0",
+    "typescript": "^3.5.1"
   }
 }
