--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "author": "Saeed Tabrizi at NowCanDo.Com",
   "email": "dev at NowCanDo.Com",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "keywords": [
     "nowjs",
     "nowjscore",
@@ -65,14 +65,14 @@
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.13",
-    "@types/node": "^12.0.7",
-    "generate-changelog": "^1.7.1",
-    "jest": ">=24.8.0",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.4",
+    "generate-changelog": "^1.8.0",
+    "jest": ">=24.9.0",
     "jest-environment-node-debug": ">=2.0.0",
     "ts-jest": "^24.0.2",
-    "ts-node": "^8.2.0",
-    "tslint": "^5.17.0",
-    "typescript": "^3.5.1"
+    "ts-node": "^8.3.0",
+    "tslint": "^5.19.0",
+    "typescript": "^3.6.2"
   }
 }
