--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "buildOnSave": false,
-  "compileOnSave": true,
+  "compileOnSave": false,
   "compilerOptions": {
     "sourceMap": false,
     "outDir": "dist",
@@ -15,38 +15,10 @@
     "emitDecoratorMetadata": true,
     "noUnusedLocals": false,
     "module": "commonjs",
-    "target": "es5",
+    "target": "esnext",
     "moduleResolution": "node",
     "lib": [
-      "es6",
-      "es7",
-      "dom",
-      "dom.iterable",
-      "es2015",
-      "es2015.core",
-      "es2015.collection",
-      "es2015.generator",
-      "es2015.generator",
-      "es2015.iterable",
-      "es2015.promise",
-      "es2015.proxy",
-      "es2015.reflect",
-      "es2015.symbol",
-      "es2015.symbol.wellknown",
-      "es2016",
-      "es2016.array.include",
-      "es2017",
-      "es2017.object",
-      "es2017.sharedmemory",
-      "es2017.typedarrays",
-      "es2017.string",
-      "es2018",
-      "es2018.promise",
-      "es2018.regexp",
-      "esnext.array",
-      "esnext.asynciterable",
-      
-      
+      "esnext"
     ]
 
   },
