fix: update dependencies and fix for join in linq

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
                 "--no-cache",
                 "--colors",
                 "--config",
-                "./jest.json",
+                "./jest.config.js",
             ],
             "cwd": "${workspaceRoot}",
             "console": "internalConsole",
