feat: implement collector and collect

--- a/package.json
+++ b/package.json
@@ -65,14 +65,14 @@
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
-    "@types/node": "^12.11.2",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.25",
     "generate-changelog": "^1.8.0",
-    "jest": ">=24.9.0",
+    "jest": "^25.1.0",
     "jest-environment-node-debug": ">=2.0.0",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.4"
+    "ts-jest": "^24.3.0",
+    "ts-node": "^8.6.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.5"
   }
 }
